k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fintech
  labels:
    name: fintech
    purpose: fintech-application
