k8s/mysql-alias-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: fintech
  labels:
    app: mysql
    component: database
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
    name: mysql
  selector:
    app: mysql
